--- a/src/components/blocks/Header.css
+++ b/src/components/blocks/Header.css
@@ -6,7 +6,7 @@
   width: 100%;
   left: 0;
   justify-content: space-between;
-  padding: 20px 20px 0 20px;
+  padding: 40px 40px 0 40px;
   box-sizing: border-box;
   align-items: center;
 }
@@ -21,14 +21,14 @@
 }
 
 .header__user-image {
-  max-width: 30px;
+  max-width: 60px;
   overflow: hidden;
-  max-height: 30px;
+  max-height: 60px;
   margin-left: 10px;
   object-fit: contain;
   width: 100%;
   height: 100%;
-  border-radius: 15px;
+  border-radius: 100px;
 }
 
 .header__title {
@@ -44,4 +44,15 @@
 
 .header__profile_link {
   text-decoration: none;
+}
+
+.header__button {
+  background-color: transparent;
+  border: none;
+  color: rgb(207, 207, 234);
+  margin-right: 10px;
+  font-family: "Cabinet Grotesk", sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  cursor: pointer;
 }
