implement feedback, submit for secondary review

--- a/src/components/blocks/PokemonModal.css
+++ b/src/components/blocks/PokemonModal.css
@@ -1,4 +1,4 @@
-.pokemon__modal {
+.pokemon-modal {
   position: fixed;
   top: 0;
   left: 0;
@@ -14,33 +14,32 @@
   z-index: 2;
 }
 
-.pokemon__modal_opened {
+.pokemon-modal_opened {
   visibility: visible;
   opacity: 1;
   pointer-events: all;
   transition: opacity 0.5s linear, visibility 0s linear; /* Adjust this */
 }
 
-.pokemon__modal_container {
+.pokemon-modal__container {
   max-width: 575px;
   max-height: 80%;
   width: 100%;
   background-color: rgb(207, 207, 234);
   border-radius: 30px;
-  padding: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: fixed;
 }
 
-.pokemon__modal_title {
+.pokemon-modal__title {
   margin: 0;
   text-align: center;
   font-size: 3rem;
 }
 
-.pokemon__modal_image {
+.pokemon-modal__image {
   max-width: 100%;
   max-height: 100%;
   position: relative;
@@ -48,7 +47,7 @@
   height: 500px;
 }
 
-.pokemon__modal_close-button {
+.pokemon-modal__close {
   background-image: url("data:image/svg+xml,%3csvg%20width='16'%20height='16'%20viewBox='0%200%2016%2016'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20fill-rule='evenodd'%20clip-rule='evenodd'%20d='M15.7023%201.70711C16.0929%201.31658%2016.0929%200.683417%2015.7023%200.292893C15.3118%20-0.0976311%2014.6787%20-0.0976311%2014.2881%200.292893L7.99805%206.58298L1.70796%200.292893C1.31744%20-0.0976311%200.684274%20-0.0976311%200.29375%200.292893C-0.096775%200.683417%20-0.096775%201.31658%200.29375%201.70711L6.58383%207.99719L0.292893%2014.2881C-0.0976311%2014.6787%20-0.0976311%2015.3118%200.292893%2015.7023C0.683417%2016.0929%201.31658%2016.0929%201.70711%2015.7023L7.99805%209.4114L14.289%2015.7023C14.6795%2016.0929%2015.3127%2016.0929%2015.7032%2015.7023C16.0937%2015.3118%2016.0937%2014.6787%2015.7032%2014.2881L9.41226%207.99719L15.7023%201.70711Z'%20fill='black'%20fill-opacity='0.3'/%3e%3c/svg%3e");
   width: 20px;
   height: 20px;
@@ -60,18 +59,20 @@
   top: 30px;
   right: 30px;
 }
-.pokemon__modal_title-container {
+.pokemon-modal__title-container {
   width: 100%;
   display: flex;
   justify-content: center;
+  padding-top: 40px;
 }
 
-.pokemon__modal_description {
+.pokemon-modal__description {
   font-size: 1.5rem;
   z-index: 99;
+  padding: 0 40px;
 }
 
-.pokemon__modal_save-button {
+.pokemon-modal__save {
   background-image: url("data:image/svg+xml,%3csvg%20width='14'%20height='19'%20viewBox='0%200%2014%2019'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M13%201.0002V16.9426L7.61816%2012.7141L7%2012.2287L6.38184%2012.7141L1%2016.9426V1.0002H13Z'%20stroke='%23B6BCBF'%20stroke-width='2'/%3e%3c/svg%3e");
   width: 16px;
   height: 19px;
@@ -87,6 +88,18 @@
   cursor: pointer;
 }
 
-.pokemon__modal_save-button_filled {
+.pokemon-modal__save_filled {
   background-image: url("data:image/svg+xml,%3csvg%20width='14'%20height='19'%20viewBox='0%200%2014%2019'%20fill='black'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M13%201.0002V16.9426L7.61816%2012.7141L7%2012.2287L6.38184%2012.7141L1%2016.9426V1.0002H13Z'%20stroke='%23B6BCBF'%20stroke-width='2'/%3e%3c/svg%3e");
+}
+
+@media screen and (max-width: 700px) {
+  .pokemon-modal__container {
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .pokemon-modal__container {
+    max-height: 95%;
+  }
 }
