--- a/src/components/blocks/Header.css
+++ b/src/components/blocks/Header.css
@@ -11,16 +11,24 @@
   align-items: center;
 }
 
-.header__logo {
-  justify-self: center;
+.header a {
+  flex: 1;
 }
 
-.header__profile {
+.header__logo {
+  text-align: left;
+  padding-left: 20px;
+}
+
+.header__profile-content {
   display: flex;
   align-items: center;
+  justify-content: end;
+  padding-right: 20px;
+  flex: 1;
 }
 
-.header__user-image {
+.header__profile-image {
   max-width: 60px;
   overflow: hidden;
   max-height: 60px;
@@ -32,17 +40,15 @@
 }
 
 .header__title {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+  color: rgb(207, 207, 234);
+  text-align: center;
+}
+
+.header__profile-name {
   color: rgb(207, 207, 234);
 }
 
-.header__user-name {
-  color: rgb(207, 207, 234);
-}
-
-.header__profile_link {
+.header__profile {
   text-decoration: none;
 }
 
@@ -55,4 +61,10 @@
   font-weight: 700;
   font-size: 20px;
   cursor: pointer;
+}
+
+@media screen and (max-width: 800px) {
+  .header {
+    flex-direction: column;
+  }
 }
