--- a/src/components/blocks/ItemCard.css
+++ b/src/components/blocks/ItemCard.css
@@ -1,4 +1,4 @@
-.pokemon__item-card_container {
+.item-card {
   list-style: none;
   width: 350px;
   background-color: rgb(207, 207, 234);
@@ -8,7 +8,7 @@
   transition: scale 0.2s, box-shadow 0.4s;
 }
 
-.pokemon__item-card_container:hover {
+.item-card:hover {
   transition: scale 0.4s, box-shadow 0.4s;
   cursor: pointer;
   scale: 1.05;
@@ -16,11 +16,11 @@
   z-index: 1;
 }
 
-.pokemon__image {
+.item-card__image {
   width: 100%;
 }
 
-.pokemon__button {
+.item-card__button {
   background-image: url("data:image/svg+xml,%3csvg%20width='14'%20height='19'%20viewBox='0%200%2014%2019'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M13%201.0002V16.9426L7.61816%2012.7141L7%2012.2287L6.38184%2012.7141L1%2016.9426V1.0002H13Z'%20stroke='%23B6BCBF'%20stroke-width='2'/%3e%3c/svg%3e");
   width: 16px;
   height: 19px;
@@ -36,6 +36,13 @@
   cursor: pointer;
 }
 
-.pokemon__button-filled {
+.item-card__button_filled {
   background-image: url("data:image/svg+xml,%3csvg%20width='14'%20height='19'%20viewBox='0%200%2014%2019'%20fill='black'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M13%201.0002V16.9426L7.61816%2012.7141L7%2012.2287L6.38184%2012.7141L1%2016.9426V1.0002H13Z'%20stroke='%23B6BCBF'%20stroke-width='2'/%3e%3c/svg%3e");
+}
+
+@media screen and (max-width: 450px) {
+  .item-card {
+    max-width: 350px;
+    width: 100%;
+  }
 }
