--- a/src/components/blocks/Profile.css
+++ b/src/components/blocks/Profile.css
@@ -3,3 +3,10 @@
   padding: 40px;
   min-height: 600px;
 }
+
+@media screen and (max-width: 750px) {
+  .profile__page {
+    flex-direction: column;
+    align-items: center;
+  }
+}
